Fix: modal guía centrado y con scroll, CSS limpio

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
         <img src="assets/img/img21.jpg" alt="Diseño 21"  onclick="abrirLightbox(this.src)">
         <img src="assets/img/img22.jpg" alt="Diseño 22"  onclick="abrirLightbox(this.src)">
         <img src="assets/img/img23.jpg" alt="Diseño 23"  onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img24.jpg" alt="Diseño 24"  onclick="abrirLightbox(this.src)">
       </div>
     </div>
   </div>
