--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
         <img src="assets/img/img22.jpg" alt="Diseño 22"  onclick="abrirLightbox(this.src)">
         <img src="assets/img/img23.jpg" alt="Diseño 23"  onclick="abrirLightbox(this.src)">
         <img src="assets/img/img24.jpg" alt="Diseño 24"  onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img25.jpg" alt="Diseño 25"  onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img26.jpg" alt="Diseño 26"  onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img27.jpg" alt="Diseño 27"  onclick="abrirLightbox(this.src)">
       </div>
     </div>
   </div>
