--- a/tarjeta.html
+++ b/tarjeta.html
@@ -79,7 +79,7 @@
     // Hitos absolutos (5 y 10)
     const REWARDS = [
       { need: 5,  prize: "20% de descuento" },
-      { need: 10, prize: "Pedicure Spa Gratis" }
+      { need: 10, prize: "Pedicure Spa o Aplicación Base Gratis" }
     ];
 
     /** =================== ACUMULATIVO =================== **/
