--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
   <header>
     <div class="contenedor-header">
       <div class="logo-container">
-        <img class="img-logo" src="assets/img/logo-Jo.png" alt="Logo Joana Mora">
+        <img class="img-logo" src="assets/img/Logo Jo.png" alt="Logo Joana Mora" width="700px">
       </div>
       <div>
         <h1 class="titulo">Joana Mora</h1>
         <h2 class="subtitulo">Nails Studio</h2>
-        <p class="designer">Nail Designer</p>
+        
       </div>
       <div class="header-buttons">
         <a href="https://wa.me/5213344782571?text=Hola%20Joana,%20quiero%20agendar%20una%20cita%20💅"
