Nueva imagen y estilos

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
       <p>“Un trabajo impecable, delicado y elegante.” – Mariana</p>
       <p>“Me encantó la atención, mis uñas quedaron hermosas.” – Fernanda</p>
       <p>“Definitivamente mi nuevo lugar favorito.” – Alejandra</p>
+      <p>“Se las recomiendo demasiado, tuve una muy linda experiencia” – Karina</p>
+      <p>“Lindo trabajo, limpio y muy muy amable” – Abril</p>
       <button class="btn-cerrar" data-close="modalResenas">Cerrar</button>
     </div>
   </div>
@@ -165,6 +167,7 @@
         <img src="assets/img/img26.jpg" alt="Diseño 26"  onclick="abrirLightbox(this.src)">
         <img src="assets/img/img27.jpg" alt="Diseño 27"  onclick="abrirLightbox(this.src)">
         <img src="assets/img/img28.jpg" alt="Diseño 28"  onclick="abrirLightbox(this.src)">
+        <img src="assets/img/img29.jpg" alt="Diseño 29"  onclick="abrirLightbox(this.src)">
       </div>
     </div>
   </div>
@@ -206,7 +209,7 @@
   <li>✨ Sin límite de referidas: ¡más amigas, más beneficios!</li>
   <li>🏆 Canjea tus sellos por descuentos o servicios gratis.</li>
     </ul>
-    <p>Que estan esperando hermosas, corran la voz, entre mas refieran mas ganan. Diles a tus amigas que mencionen tu nombre y número de telefono cuando agenden</p>
+    <p>Que estan esperando hermosas, corran la voz, entre mas refieran mas ganan. Dile a tus amigas que mencionen tu nombre y número de telefono cuando agenden para aplicarte tu sellito 🫶🏻 </p>
     
   </div>
 </div>
